<resources>
    <string name="app_name">News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="txt_username">昵称：</string>
    <string name="txt_password">密码：</string>
    <string name="txt_passwordConfirm">确认密码：</string>
    <string name="btn_login">登陆</string>
    <string name="btn_forgetPassword">忘记密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_haveCount">已有账号</string>
    <string name="txt_email">邮箱:</string>
    <string name="txt_emailConfirmCode">验证码：</string>
    <string name="btn_getEmailConfirmCode">获取验证码：</string>
    <string name="btn_resetPassword">重置密码</string>
    
    <string name="defaultUsername">sjh</string>
    <string name="defaultEmail">252355189@qq.com</string>
    
    <string name="recommend">推荐</string>
    <string name="technology">科技</string>
    <string name="military">军事</string>
    <string name="it">社会</string>
    <string name="fun">娱乐</string>
    <string name="football">体育</string>
    <string name="nba">国际</string>
    <string name="customTag">自定义</string>

    <string name="submit">提交</string>
    <string name="interestChoice">个性化标签</string>

    <string name="newsTitle">这是个新闻标题</string>
    <string name="newsRes">这是个新闻来源</string>

    <string name="err">网络错误</string>
    <string name="getNewsError">""</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入搜索内容</string>
    <string name="updateCustomTag">修改关键字</string>
    <string name="logout">退出</string>
</resources>
