<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/recommend" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/technology" />
        <item
            android:id="@+id/nav_fun"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/fun" />
        <item
            android:id="@+id/nav_military"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/military" />
        <item
            android:id="@+id/nav_it"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/it" />
        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/football" />
        <item
            android:id="@+id/nav_nba"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nba" />
        <item
            android:id="@+id/nav_custom"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/customTag"/>

    </group>

    <item android:title="个人功能">
        <menu>
            <item
                android:id="@+id/nav_updateCustomTag"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/updateCustomTag" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
