<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:text="@string/interestChoice"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/technology" />

            <CheckBox
                android:id="@+id/checkbox_fun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/fun" />

            <CheckBox
                android:id="@+id/checkbox_military"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/military" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="@string/it" />

            <CheckBox
                android:id="@+id/checkbox_football"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:layout_marginStart="29dp"
                android:text="@string/football" />

            <CheckBox
                android:id="@+id/checkbox_nba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/nba" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/txt_customTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/customTag"
            android:layout_marginLeft="71dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_interestChoice"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="30sp"
        android:onClick="submit"/>

</LinearLayout>