<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_forgetpasswordToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:onClick="backToLoginPage">

    </ImageButton>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/txt_email_forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:hint="@string/txt_email"
            android:inputType="text"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_getEmailConfirmCode_forgetpassword"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_getEmailConfirmCode"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="2"
            android:clickable="true"
            android:background="@drawable/textview_border"
            android:onClick="getEmailConfirmCode"/>

        <EditText
            android:id="@+id/txt_emailConfirmCode_forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:hint="@string/txt_emailConfirmCode"
            android:inputType="textEmailAddress"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/txt_password_forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="2"
            android:text="@string/txt_passwordConfirm"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_passwordConfirm_forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:hint="@string/txt_passwordConfirm"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_resetpassword_forgetpassword"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/btn_resetPassword"
            android:onClick="resetPassword"/>

    </LinearLayout>

</LinearLayout>