<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_with_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/txt_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/txt_username"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/txt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/btn_login"
            android:onClick="login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/btn_register_login"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/btn_register"
                android:textSize="7pt"
                android:clickable="true"
                android:textColor="#333355"
                android:layout_marginLeft="75dp"
                android:layout_marginStart="75dp"
                android:focusable="true"
                android:onClick="toRegisterPage"/>

            <TextView
                android:id="@+id/btn_forgetPassword_login"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/btn_forgetPassword"
                android:textSize="7pt"
                android:clickable="true"
                android:textColor="#333355"
                android:focusable="true"
                android:onClick="toForgetPasswordPage"/>

    </LinearLayout>

</LinearLayout>
